--- a/akman-lib/pom.xml
+++ b/akman-lib/pom.xml
@@ -19,5 +19,11 @@
       <artifactId>bcpkix-jdk15on</artifactId>
       <version>1.60</version>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
