--- a/akman-lib/pom.xml
+++ b/akman-lib/pom.xml
@@ -19,11 +19,21 @@
       <artifactId>bcpkix-jdk15on</artifactId>
       <version>1.60</version>
     </dependency>
+
+    <!-- Test scope -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.14.3</version>
       <scope>test</scope>
+    </dependency>
+
+    <!-- Provided scope -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.2</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
