--- a/akman-server/pom.xml
+++ b/akman-server/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>tomcat-embed-core</artifactId>
       <version>${tomcat.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.errorprone</groupId>
+      <artifactId>error_prone_core</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
