--- a/akman-lib/pom.xml
+++ b/akman-lib/pom.xml
@@ -16,6 +16,11 @@
   <dependencies>
     <dependency>
       <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.60</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
       <artifactId>bcpkix-jdk15on</artifactId>
       <version>1.60</version>
     </dependency>
