--- a/akman-lib/pom.xml
+++ b/akman-lib/pom.xml
@@ -28,6 +28,10 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+    </dependency>
 
     <!-- Test scope -->
     <dependency>
