--- a/akman-server/pom.xml
+++ b/akman-server/pom.xml
@@ -28,6 +28,10 @@
       <artifactId>error_prone_core</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
