--- a/pom.xml
+++ b/pom.xml
@@ -267,8 +267,7 @@ Sections that did not require modification or management have been removed. Much
               <goal>check</goal>
             </goals>
             <configuration>
-              <!-- <configLocation>some classath resource</configLocation> -->
-              <skip>true</skip><!-- TODO turn back on -->
+              <configLocation>${maven.multiModuleProjectDirectory}/checkstyle.xml</configLocation>
               <violationSeverity>info</violationSeverity>
             </configuration>
           </execution>
