--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,9 @@ Sections that did not require modification or management have been removed. Much
             </goals>
             <configuration>
               <configLocation>${maven.multiModuleProjectDirectory}/checkstyle.xml</configLocation>
-              <violationSeverity>info</violationSeverity>
+              <!-- We should only use levels error and info, warnings
+                   are not helpful -->
+              <violationSeverity>warning</violationSeverity>
             </configuration>
           </execution>
         </executions>
